--- a/examples/signaling-server-nodejs/package.json
+++ b/examples/signaling-server-nodejs/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "libdatachannel-example-web",
-  "version": "0.0.1",
-  "description": "Example for libdatachannel",
+  "name": "libdatachannel-signaling-server",
+  "version": "0.1.0",
+  "description": "Signaling server example for libdatachannel",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
+    "start": "node signaling-server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
