Fixes to build for iOS
Added bundle identifiers to executables

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -355,6 +355,8 @@ if(NOT NO_TESTS)
 		VERSION ${PROJECT_VERSION}
 		CXX_STANDARD 17)
 	set_target_properties(datachannel-tests PROPERTIES OUTPUT_NAME tests)
+	set_target_properties(datachannel-tests PROPERTIES
+		XCODE_ATTRIBUTE_PRODUCT_BUNDLE_IDENTIFIER com.github.paullouisageneau.libdatachannel.tests)
 	target_include_directories(datachannel-tests PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/src)
 	target_link_libraries(datachannel-tests datachannel)
 
@@ -369,6 +371,8 @@ if(NOT NO_TESTS)
 		VERSION ${PROJECT_VERSION}
 		CXX_STANDARD 17)
 	set_target_properties(datachannel-benchmark PROPERTIES OUTPUT_NAME benchmark)
+	set_target_properties(datachannel-benchmark PROPERTIES
+		XCODE_ATTRIBUTE_PRODUCT_BUNDLE_IDENTIFIER com.github.paullouisageneau.libdatachannel.benchmark)
 	target_compile_definitions(datachannel-benchmark PRIVATE BENCHMARK_MAIN=1)
 	target_include_directories(datachannel-benchmark PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/src)
 	target_link_libraries(datachannel-benchmark datachannel)
