--- a/examples/copy-paste/CMakeLists.txt
+++ b/examples/copy-paste/CMakeLists.txt
@@ -28,6 +28,8 @@ endif()
 set_target_properties(datachannel-copy-paste-offerer PROPERTIES
 	CXX_STANDARD 17
 	OUTPUT_NAME offerer)
+set_target_properties(datachannel-copy-paste-offerer PROPERTIES
+	XCODE_ATTRIBUTE_PRODUCT_BUNDLE_IDENTIFIER com.github.paullouisageneau.libdatachannel.examples.copypaste.offerer)
 target_link_libraries(datachannel-copy-paste-offerer datachannel)
 
 if(CMAKE_SYSTEM_NAME STREQUAL "WindowsStore")
@@ -38,6 +40,8 @@ endif()
 set_target_properties(datachannel-copy-paste-answerer PROPERTIES
 	CXX_STANDARD 17
 	OUTPUT_NAME answerer)
+set_target_properties(datachannel-copy-paste-answerer PROPERTIES
+	XCODE_ATTRIBUTE_PRODUCT_BUNDLE_IDENTIFIER com.github.paullouisageneau.libdatachannel.examples.copypaste.answerer)
 target_link_libraries(datachannel-copy-paste-answerer datachannel)
 
 if(WIN32)
