--- a/examples/client-benchmark/CMakeLists.txt
+++ b/examples/client-benchmark/CMakeLists.txt
@@ -2,19 +2,33 @@ cmake_minimum_required(VERSION 3.7)
 if(POLICY CMP0079)
 	cmake_policy(SET CMP0079 NEW)
 endif()
-find_package(Threads)
+
+set(CLIENT_SOURCES
+	main.cpp
+	parse_cl.cpp
+	parse_cl.h
+)
+
+set(GETOPT_SOURCES
+	getopt.cpp
+	getopt.h
+)
+
 if(WIN32)
-	add_executable(datachannel-client-benchmark main.cpp parse_cl.cpp parse_cl.h getopt.cpp getopt.h)
+	add_executable(datachannel-client-benchmark ${CLIENT_SOURCES} ${GETOPT_SOURCES})
 	target_compile_definitions(datachannel-client-benchmark PUBLIC STATIC_GETOPT)
 else()
-	add_executable(datachannel-client-benchmark main.cpp parse_cl.cpp parse_cl.h)
+	add_executable(datachannel-client-benchmark ${CLIENT_SOURCES})
 endif()
 
 set_target_properties(datachannel-client-benchmark PROPERTIES
 	CXX_STANDARD 17
 	OUTPUT_NAME client-benchmark)
+
 set_target_properties(datachannel-client-benchmark PROPERTIES
 	XCODE_ATTRIBUTE_PRODUCT_BUNDLE_IDENTIFIER com.github.paullouisageneau.libdatachannel.examples.client.benchmark)
+
+find_package(Threads)
 target_link_libraries(datachannel-client-benchmark datachannel nlohmann_json Threads::Threads)
 
 if(WIN32)
