Add SCTP_DEBUG option to enable usrsctp debug output in verbose log

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,6 +15,7 @@ option(NO_EXAMPLES "Disable examples" OFF)
 option(NO_TESTS "Disable tests build" OFF)
 option(WARNINGS_AS_ERRORS "Treat warnings as errors" OFF)
 option(CAPI_STDCALL "Set calling convention of C API callbacks stdcall" OFF)
+option(SCTP_DEBUG "Enable SCTP debugging output to verbose log" OFF)
 
 if(USE_GNUTLS)
 	option(USE_NETTLE "Use Nettle in libjuice" ON)
@@ -199,6 +200,9 @@ find_package(Threads REQUIRED)
 set(CMAKE_POLICY_DEFAULT_CMP0048 NEW)
 add_subdirectory(deps/plog EXCLUDE_FROM_ALL)
 
+if(SCTP_DEBUG)
+	add_definitions(-DSCTP_DEBUG)
+endif()
 option(sctp_build_programs 0)
 option(sctp_build_shared_lib 0)
 set(CMAKE_POLICY_DEFAULT_CMP0077 NEW)
