--- a/.gitmodules
+++ b/.gitmodules
@@ -1,7 +1,7 @@
 [submodule "deps/plog"]
 	path = deps/plog
 	url = https://github.com/SergiusTheBest/plog.git
-[submodule "usrsctp"]
+[submodule "deps/usrsctp"]
 	path = deps/usrsctp
 	url = https://github.com/sctplab/usrsctp.git
 [submodule "deps/libjuice"]
