--- a/.github/workflows/build-openssl.yml
+++ b/.github/workflows/build-openssl.yml
@@ -14,7 +14,7 @@ jobs:
     - name: install packages
       run: sudo apt update && sudo apt install libssl-dev libsrtp2-dev
     - name: submodules
-      run: git submodule update --init --recursive
+      run: git submodule update --init --recursive --depth 1
     - name: cmake
       run: cmake -B build -DUSE_GNUTLS=0 -DUSE_SYSTEM_SRTP=1 -DWARNINGS_AS_ERRORS=1
     - name: make
@@ -28,7 +28,7 @@ jobs:
     - name: install packages
       run: HOMEBREW_NO_INSTALL_CLEANUP=1 brew reinstall openssl@1.1
     - name: submodules
-      run: git submodule update --init --recursive
+      run: git submodule update --init --recursive --depth 1
     - name: cmake
       run: cmake -B build -DUSE_GNUTLS=0 -WARNINGS_AS_ERRORS=1 -DENABLE_LOCAL_ADDRESS_TRANSLATION=1
       env:
@@ -45,7 +45,7 @@ jobs:
     - name: install packages
       run: choco install openssl
     - name: submodules
-      run: git submodule update --init --recursive
+      run: git submodule update --init --recursive --depth 1
     - name: cmake
       run: cmake -B build -G "NMake Makefiles" -DUSE_GNUTLS=0 -WARNINGS_AS_ERRORS=1
     - name: nmake
