--- a/.github/workflows/build-gnutls.yml
+++ b/.github/workflows/build-gnutls.yml
@@ -14,7 +14,7 @@ jobs:
     - name: install packages
       run: sudo apt update && sudo apt install libgnutls28-dev nettle-dev libsrtp2-dev
     - name: submodules
-      run: git submodule update --init --recursive
+      run: git submodule update --init --recursive --depth 1
     - name: cmake
       run: cmake -B build -DUSE_GNUTLS=1 -DUSE_SYSTEM_SRTP=1 -DWARNINGS_AS_ERRORS=1
     - name: make
@@ -28,7 +28,7 @@ jobs:
     - name: install packages
       run: brew install gnutls nettle
     - name: submodules
-      run: git submodule update --init --recursive
+      run: git submodule update --init --recursive --depth 1
     - name: cmake
       run: cmake -B build -DUSE_GNUTLS=1 -DWARNINGS_AS_ERRORS=1 -DENABLE_LOCAL_ADDRESS_TRANSLATION=1
     - name: make
