Match Upstream LibSRTP CMake Targets

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -272,18 +272,18 @@ else()
 	target_compile_definitions(datachannel PUBLIC RTC_ENABLE_MEDIA=1)
 	target_compile_definitions(datachannel-static PUBLIC RTC_ENABLE_MEDIA=1)
 	if(USE_SYSTEM_SRTP)
-		find_package(SRTP REQUIRED)
-		if(NOT TARGET SRTP::SRTP)
-			add_library(SRTP::SRTP UNKNOWN IMPORTED)
-			set_target_properties(SRTP::SRTP PROPERTIES
+		find_package(libSRTP REQUIRED)
+		if(NOT TARGET libSRTP::srtp2)
+			add_library(libSRTP::srtp2 UNKNOWN IMPORTED)
+			set_target_properties(libSRTP::srtp2 PROPERTIES
 				INTERFACE_INCLUDE_DIRECTORIES ${SRTP_INCLUDE_DIRS}
 				IMPORTED_LINK_INTERFACE_LANGUAGES C
 				IMPORTED_LOCATION ${SRTP_LIBRARIES})
 		endif()
 		target_compile_definitions(datachannel PRIVATE RTC_SYSTEM_SRTP=1)
 		target_compile_definitions(datachannel-static PRIVATE RTC_SYSTEM_SRTP=1)
-		target_link_libraries(datachannel PRIVATE SRTP::SRTP)
-		target_link_libraries(datachannel-static PRIVATE SRTP::SRTP)
+		target_link_libraries(datachannel PRIVATE libSRTP::srtp2)
+		target_link_libraries(datachannel-static PRIVATE libSRTP::srtp2)
 	else()
 		add_subdirectory(deps/libsrtp EXCLUDE_FROM_ALL)
 		target_compile_definitions(datachannel PRIVATE RTC_SYSTEM_SRTP=0)
