--- a/.github/workflows/build-nowebsocket.yml
+++ b/.github/workflows/build-nowebsocket.yml
@@ -7,7 +7,7 @@ on:
     branches:
     - master
 jobs:
-  build-linux:
+  build-nowebsocket:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
