Examples: Renamed media to media-receiver

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -472,7 +472,7 @@ if(NOT NO_EXAMPLES)
 		add_subdirectory(examples/client-benchmark)
 	endif()
 	if(NOT NO_MEDIA)
-		add_subdirectory(examples/media)
+		add_subdirectory(examples/media-receiver)
 		add_subdirectory(examples/sfu-media)
 	endif()
 	if(NOT NO_MEDIA AND NOT NO_WEBSOCKET)
