Examples: Renamed sfu-media to media-sfu

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -473,7 +473,7 @@ if(NOT NO_EXAMPLES)
 	endif()
 	if(NOT NO_MEDIA)
 		add_subdirectory(examples/media-receiver)
-		add_subdirectory(examples/sfu-media)
+		add_subdirectory(examples/media-sfu)
 	endif()
 	if(NOT NO_MEDIA AND NOT NO_WEBSOCKET)
     	add_subdirectory(examples/streamer)
